# designing_ai_systems_repo

./: .cursorrules  .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: data.Dockerfile  gateway.Dockerfile  guardrails.Dockerfile  models.Dockerfile  sessions.Dockerfile  tools.Dockerfile  workflow.Dockerfile
examples/: _workflow_demo_harness.py  quickstart_conversation.py  quickstart_mcp.py  quickstart_models.py  quickstart_rag.py  quickstart_tools.py  quickstart_workflow.py  quickstart_workflow_async.py  quickstart_workflow_compose.py  quickstart_workflow_stream.py  test_data_service.py  test_guardrails_service.py  test_model_service.py  test_session_service.py  test_tool_service.py
genai_platform/: __init__.py  grpc_retry.py  platform.py  workflow.py
proto/: __init__.py  data.proto  data_pb2.py  data_pb2_grpc.py  generate.py  guardrails.proto  guardrails_pb2.py  guardrails_pb2_grpc.py  models.proto  models_pb2.py  models_pb2_grpc.py  sessions.proto  sessions_pb2.py  sessions_pb2_grpc.py  tools.proto  tools_pb2.py  tools_pb2_grpc.py  workflow.proto  workflow_pb2.py  workflow_pb2_grpc.py
services/: __init__.py
tests/: test_base_client_channel.py  test_circuit_breaker.py  test_credential_store.py  test_data_chunking.py  test_data_comprehensive.py  test_data_embedding.py  test_data_models.py  test_data_parsers.py  test_data_pipeline.py  test_data_search.py  test_data_service.py  test_data_storage.py  test_docker_deployer.py  test_gateway_stale_route_recovery.py  test_guardrail_models.py  test_guardrail_service.py  (+30 more)
(+74 files in other folders)
